Fix spacing issues with header-buttons on logged-in users, on large tablets and desktops. Add "Try a public account" button on new mobile menu.

--- a/dev/webapp/css/base.css
+++ b/dev/webapp/css/base.css
@@ -506,7 +506,7 @@ html, body {
 /* Desktop Header Buttons */
 #header-buttons {
 	width: 32px;
-	margin: 40px auto;
+	margin: 80px auto 0 auto;
 }
 
 #header-buttons a {
